# realm

./: Cargo.toml
input/: startup.txt  system.txt
src/: color.rs  eval.rs  lsystem.rs  main.rs  sdf.rs  transform.rs  triangle_draw.rs
src/code/: function.rs  mod.rs  spell.rs
src/frame/: ambient_lighting_system.rs  directional_lighting_system.rs  mod.rs  point_lighting_system.rs  system.rs
src/mesh_generation/: extrude.rs  mod.rs
src/syntax/: code.rs  lsystem.rs  math.rs  mod.rs
src/terrain/: chunk_generator.rs  mesh_generator.rs  mod.rs  voxel_map.rs  voxel_mesh.rs
src/world/: camera.rs  input.rs  library.rs  mod.rs  spellcaster.rs
src/world/components/: avatar.rs  mod.rs  terrain.rs
src/world/entity/: avatar.rs  flora.rs  mod.rs
