[package]
name = "realm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"

vulkano = "0.26.0"
vulkano-shaders = "0.26.0"
vulkano-win = "0.26.0"
winit = "0.25"

slotmap = "1.0"
cgmath = "0.18"
ndshape = "0.2.0"

combine = "4.6.2"
